; ModuleID = '/home/carl/AnghaBench/linux/arch/alpha/kernel/extr_sys_eiger.c_eiger_device_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/alpha/kernel/extr_sys_eiger.c_eiger_device_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @eiger_device_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eiger_device_interrupt(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = call i32 @inw(i32 1280)
  %5 = and i32 %4, 15
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %33

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = call i32 @handle_irq(i32 19)
  br label %14

14:                                               ; preds = %12, %8
  %15 = load i32, i32* %3, align 4
  %16 = and i32 %15, 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = call i32 @handle_irq(i32 18)
  br label %20

20:                                               ; preds = %18, %14
  %21 = load i32, i32* %3, align 4
  %22 = and i32 %21, 2
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = call i32 @handle_irq(i32 17)
  br label %26

26:                                               ; preds = %24, %20
  %27 = load i32, i32* %3, align 4
  %28 = and i32 %27, 1
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %26
  %31 = call i32 @handle_irq(i32 16)
  br label %32

32:                                               ; preds = %30, %26
  br label %36

33:                                               ; preds = %1
  %34 = load i64, i64* %2, align 8
  %35 = call i32 @isa_device_interrupt(i64 %34)
  br label %36

36:                                               ; preds = %33, %32
  ret void
}

declare dso_local i32 @inw(i32) #1

declare dso_local i32 @handle_irq(i32) #1

declare dso_local i32 @isa_device_interrupt(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
